# openmp-revision

./: CMakeLists.txt  README.md
app/: master.cpp  sync-barriers.cpp
